crates/aranya-policy-compiler/tests/data/facts/invalid_value_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: bool
  |
1 | fact Foo[i int] => {a string}
  |                     - expected because of this
2 | action test() {
3 |     check exists Foo[i: 1] => {a: true}
  |                                   ^^^^ expected `string` but found `bool`
